--- a/app/src/main/res/menu/bottom_nav_drawer_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_drawer_menu.xml
@@ -13,5 +13,13 @@
             android:id="@+id/nav3"
             android:icon="@drawable/ic_notifications_black_24dp"
             android:title="@string/nav_item3" />
+        <item
+            android:id="@+id/nav4"
+            android:icon="@drawable/ic_reply_white_24dp"
+            android:title="@string/nav_item2" />
+        <item
+            android:id="@+id/nav5"
+            android:icon="@drawable/ic_menu_24"
+            android:title="@string/nav_item3" />
     </group>
 </menu>
