--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3c2291</color>
     <color name="colorPrimaryDark">#391d94</color>
-    <color name="colorAccent">#66b952</color>
+    <color name="colorAccent">#2b691c</color>
 </resources>
