--- a/app/src/main/res/layout/activity_bottom_app_bar.xml
+++ b/app/src/main/res/layout/activity_bottom_app_bar.xml
@@ -5,27 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--    <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/toggle"
+            app:icon="@drawable/ic_dashboard_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/coordinatorLayout"
+            app:rippleColor="@color/colorAccent" />-->
+
+
+    <Switch
+        android:id="@+id/sw_toggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="8dp"
+        android:checked="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/coordinatorLayout" />
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".BottomAppBarActivity">
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".activities.BottomAppBarActivity">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
-            style="@style/Widget.MaterialComponents.BottomAppBar"
+            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_gravity="bottom"
             app:backgroundTint="@color/colorPrimary"
-            app:fabCradleMargin="5dp" />
+            app:fabCradleMargin="3dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
+            style="@style/Widget.MaterialComponents.FloatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fabSize="normal"
+            android:translationZ="2dp"
+            app:elevation="10dp"
+            app:fabSize="auto"
             app:layout_anchor="@+id/bottom_app_bar"
-            app:pressedTranslationZ="12dp" />
+            app:pressedTranslationZ="5dp" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
