--- a/app/src/main/res/layout/activity_bottom_app_bar.xml
+++ b/app/src/main/res/layout/activity_bottom_app_bar.xml
@@ -20,6 +20,17 @@
             app:rippleColor="@color/colorAccent" />-->
 
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sw_toggle" />
+
     <Switch
         android:id="@+id/sw_toggle"
         android:layout_width="wrap_content"
