--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3c2291</color>
+    <color name="navItemSelectedbg">#d72d1f59</color>
     <color name="colorPrimaryDark">#391d94</color>
     <color name="colorAccent">#2b691c</color>
 </resources>
