--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,11 @@
     <color name="colorPrimary">#3c2291</color>
     <color name="navItemSelectedbg">#d72d1f59</color>
     <color name="colorPrimaryDark">#391d94</color>
-    <color name="colorAccent">#2b691c</color>
+    <color name="colorAccent">#7239bc</color>
+
+    <color name="primaryColor_night">#F44336</color>
+    <color name="primaryColorDark_night">#D32F2F</color>
+    <color name="primaryAccent_night">#e97142</color>
+    <color name="primarybox_night">#629f1c</color>
+
 </resources>
