--- a/app/src/main/res/menu/bottom_nav_drawer_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_drawer_menu.xml
@@ -45,7 +45,7 @@
                     android:title="@string/nav_item2" />
                 <item
                     android:id="@+id/nav5"
-                    android:icon="@drawable/ic_menu_24"
+                    android:icon="@drawable/ic_search_white_24dp"
                     android:title="@string/nav_item3" />
                 <item
                     android:id="@+id/nav6"
@@ -65,7 +65,7 @@
                     android:title="@string/nav_item2" />
                 <item
                     android:id="@+id/nav10"
-                    android:icon="@drawable/ic_menu_24"
+                    android:icon="@drawable/ic_menu_white_24dp"
                     android:title="@string/nav_item3" />
                 <item
                     android:id="@+id/nav11"
